<resources>
    <string name="app_name">Veraxe</string>

    <string name="banner_ad_unit_id">ca-app-pub-5990787515520459/3286120126</string>

    <string name="base_url">http://manage.veraxe.com/api/</string>
    <string name="studentmobile">auth/studentmobile</string>
    <string name="studentlogin">auth/studentlogin</string>
    <string name="teacherlogin">auth/userlogin</string>
    <string name="getstudentlist">getstudentlist</string>
    <string name="setup_studentpassword">setup/studentpassword</string>
    <string name="update_studentpassword">update/studentpassword</string>
    <string name="resendotp">resendotp</string>
    <string name="student_attendance">student-attendance</string>
    <string name="student_homework">student-homework</string>
    <string name="student_homework_date">student-homework-date</string>
    <string name="student_homework_detail">student-homework-detail</string>
    <string name="student_events">student-events</string>
    <string name="student_events_detail">student-event-detail</string>
    <string name="student_messages">student-messages</string>
    <string name="student_timetable">student-timetable</string>
    <string name="attendance_self">attendance-self</string>
    <string name="selectlist_class">selectlist/class</string>
    <string name="selectlist_section">selectlist/section</string>
    <string name="selectlist_subject">selectlist/subject</string>
    <string name="selectlist_student">selectlist/student</string>
    <string name="attendancereport">attendancereport</string>
    <string name="studentdetail">studentdetail</string>
    <string name="userprofile">userprofile</string>
    <string name="attendancestatus">attendancestatus</string>
    <string name="markattendance">markattendance</string>
    <string name="homework">homework</string>
    <string name="events">events</string>
    <string name="dashboard_student">dashboard-student</string>
    <string name="dashboard_school">dashboard-school</string>
    <string name="auth_changepassword">auth/changepassword</string>
    <string name="addevent">addevent</string>
    <string name="delete_homework">delete/homework</string>
    <string name="delete_event">delete/event</string>
    <string name="addhomework">addhomework</string>
    <string name="teacher_timetable">teacher-timetable</string>
    <string name="event_detail">event-detail</string>
    <string name="homework_detail">homework-detail</string>
    <string name="upload_eventphoto">upload/eventphoto</string>
    <string name="upload_eventvideo">upload/eventvideo</string>
    <string name="upload_attachments">upload/attachments</string>

    <string name="feedback_department">feedback/department</string>
    <string name="feedback_save">feedback/save</string>
    <string name="feedback_list">feedback/list</string>
    <string name="feedback_detail">feedback/detail</string>
    <string name="feedback_addcomment">feedback/addcomment</string>
    <string name="feedback_trash">feedback/trash</string>
    <string name="feedback_close">feedback/close</string>

    <string name="school_feedback_list">feedback/list</string>
    <string name="school_feedback_detail">feedback/detail</string>
    <string name="school_feedback_addcomment">feedback/addcomment</string>

    <string name="enter_schollid">Please enter School Id.</string>
    <string name="enter_username">Please enter Username.</string>
    <string name="enter_password">Please enter Password.</string>
    <string name="enter_message">Please enter Message.</string>
    <string name="enter_mobileno">Please enter Mobile number.</string>
    <string name="pasword_mismatch">Password mismatch!!</string>
    <string name="enter_old_pass">Please enter old password.</string>
    <string name="enter_new_pass">Please enter new password.</string>
    <string name="reenter_pass">Please enter password again.</string>
    <string name="selecte_class">Please select class.</string>
    <string name="select_naturefeedback">Please select Nature of Feedback.</string>
    <string name="selecte_department">Please select Department.</string>
    <string name="enterEventTitle">Please enter event title.</string>
    <string name="enterhomework_text">Please enter homework text.</string>
    <string name="enterstart_date">Please select event start date.</string>
    <string name="enterend_date">Please select event end date.</string>

    <string name="message_network_problem">Please check your internet connectivity.</string>
    <string name="message_problem">Opps! Something went wrong, please try again.</string>
    <string name="problem_server">Problem connecting to server, Please try later.</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_dashboard">DashboardActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_attendance">Attendance</string>
    <string name="title_activity_self_attendance">SelfAttendance</string>
    <string name="title_activity_add_event">AddEvent</string>
    <string name="title_activity_time_table">TimeTable</string>
    <string name="title_activity_play_video">PlayVideo</string>
    <string name="select_section">Please select section</string>
    <string name="save">Save</string>
    <string name="all">All</string>
    <string name="students">Students</string>
    <string name="messages">Messages</string>
    <string name="profile">Profile</string>
    <string name="change_password">Change Password</string>
    <string name="events1">Events</string>
    <string name="share">Share</string>
    <string name="logout">Logout</string>
    <string name="title_activity_student_profile">StudentProfile</string>
    <string name="by_clicking_below_you_agree_to_veraxe_terms"><u>By clicking below, you agree to Veraxe\' T &amp; C</u></string>
    <string name="self_atendance">Self Atendance</string>
    <string name="atendance_report">Atendance Report</string>
    <string name="atendance">Atendance</string>
    <string name="time_table">Time Table</string>
    <string name="designation">Designation:</string>
    <string name="gender">Gender:</string>
    <string name="mobile">Mobile:</string>
    <string name="email">Email:</string>
    <string name="address">Address:</string>
    <string name="school_name">School Name:</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="att_not_marked">Attendance not marked yet.</string>
    <string name="att_marked">Attendance marked.</string>
    <string name="feedabck">Feedback</string>
    <string name="title_activity_add_feedback">AddFeedback</string>
    <string name="submit">Submit</string>

</resources>
