<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_student_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.app.veraxe.student.StudentProfile"
    tools:showIn="@layout/activity_student_profile">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/dp10">


            <ImageView
                android:id="@+id/image_user"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dp20"
                android:src="@drawable/user" />


            <TextView
                android:id="@+id/text_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="@dimen/dp10"
                android:text=""
                android:textColor="@color/text_color_darkgrey"
                android:textSize="@dimen/text_size_16" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp10"
                android:layout_marginTop="@dimen/dp10"
                android:orientation="horizontal"
                android:padding="@dimen/dp5"
                android:weightSum="5">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="2"
                    android:text="@string/designation"
                    android:textColor="@color/text_color_blue"
                    android:textSize="@dimen/text_size_17"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_designation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="3"
                    android:text=""
                    android:textColor="@color/text_color_darkgrey"
                    android:textSize="@dimen/text_size_15" />


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp10"
                android:layout_marginTop="@dimen/dp10"
                android:orientation="horizontal"
                android:padding="@dimen/dp5"
                android:weightSum="5">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="2"
                    android:text="@string/school_name"
                    android:textColor="@color/text_color_blue"
                    android:textSize="@dimen/text_size_17"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_school_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="3"
                    android:text=""
                    android:textColor="@color/text_color_darkgrey"
                    android:textSize="@dimen/text_size_15" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp10"
                android:layout_marginTop="@dimen/dp10"
                android:orientation="horizontal"
                android:padding="@dimen/dp5"
                android:weightSum="5">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="2"
                    android:text="@string/gender"
                    android:textColor="@color/text_color_blue"
                    android:textSize="@dimen/text_size_17"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_gender"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="3"
                    android:text=""
                    android:textColor="@color/text_color_darkgrey"
                    android:textSize="@dimen/text_size_15" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp10"
                android:layout_marginTop="@dimen/dp10"
                android:orientation="horizontal"
                android:padding="@dimen/dp5"
                android:weightSum="5">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="2"
                    android:text="@string/mobile"
                    android:textColor="@color/text_color_blue"
                    android:textSize="@dimen/text_size_17"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_mobile"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="3"
                    android:text=""
                    android:textColor="@color/text_color_darkgrey"
                    android:textSize="@dimen/text_size_15" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp10"
                android:layout_marginTop="@dimen/dp10"
                android:orientation="horizontal"
                android:padding="@dimen/dp5"
                android:weightSum="5">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="2"
                    android:text="@string/email"
                    android:textColor="@color/text_color_blue"
                    android:textSize="@dimen/text_size_17"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="3"
                    android:text=""
                    android:textColor="@color/text_color_darkgrey"
                    android:textSize="@dimen/text_size_15" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp10"
                android:layout_marginTop="@dimen/dp10"
                android:orientation="horizontal"
                android:padding="@dimen/dp5"
                android:weightSum="5">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="2"
                    android:text="@string/address"
                    android:textColor="@color/text_color_blue"
                    android:textSize="@dimen/text_size_17"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_address"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="3"
                    android:text=""
                    android:textColor="@color/text_color_darkgrey"
                    android:textSize="@dimen/text_size_15" />


            </LinearLayout>

        </LinearLayout>


    </ScrollView>
</RelativeLayout>
